--- a/src/konnekt/view/NavigatorView.form
+++ b/src/konnekt/view/NavigatorView.form
@@ -25,8 +25,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="mainPanel" pref="679" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+              <Component id="mainPanel" pref="685" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
