--- a/src/konnekt/view/ChangePasswordView.form
+++ b/src/konnekt/view/ChangePasswordView.form
@@ -130,7 +130,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Verdana" size="24" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="FORGOT PASSWORD"/>
+            <Property name="text" type="java.lang.String" value="CHANGE PASSWORD"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JPasswordField" name="passwordPasswordField">
