--- a/src/konnekt/view/LoginView.form
+++ b/src/konnekt/view/LoginView.form
@@ -245,7 +245,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel12redirect"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="adminRedirect"/>
           </Events>
         </Component>
       </SubComponents>
